# annbatch

./: .codecov.yaml  .cruft.json  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  LICENSE  README.md  noxfile.py  pyproject.toml
.cursor/: worktrees.json
.github/ISSUE_TEMPLATE/: feature_request.yml
.github/workflows/: build.yml  check-pr.yml  doc-changes.yml  release.yaml  test-gpu.yaml  test.yaml
arrayloaders/: __init__.py
arrayloaders/arrayloaders/io/: __init__.py  datamodules.py
arrayloaders/io/: __init__.py  abstract_dataset.py  anndata_manager.py  dask_loader.py  datamodules.py  in_memory_loader.py  loading.py  pure_zarr.py  store_creation.py  types.py  utils.py  zarr_loader.py
arrayloaders/models/: __init__.py
docs/: api.md  conf.py  contributing.md  custom-sampler.md  detailed-walkthrough.md  index.md  installation.md  overview.md  preshuffling.md  quickstart.ipynb  reference.md  references.bib  usage.md  zarr-configuration.md
docs/_static/css/: custom.css
docs/_templates/autosummary/: class.rst
docs/about/: background.md  cite.md
docs/notebooks/: example.ipynb  index.md
docs/tutorials/: distributed.ipynb  genetics.ipynb  images.ipynb  quickstart.ipynb  scrnaseq.ipynb
docs/tutorials/example_0.zarr/: zarr.json
docs/tutorials/example_0.zarr/X/: zarr.json
docs/tutorials/example_0.zarr/X/data/: zarr.json
docs/tutorials/example_0.zarr/X/data/c/: 0
docs/tutorials/example_0.zarr/X/indices/: zarr.json
docs/tutorials/example_0.zarr/X/indices/c/: 0
docs/tutorials/example_0.zarr/X/indptr/: zarr.json
docs/tutorials/example_0.zarr/X/indptr/c/: 0
docs/tutorials/example_0.zarr/obs/: zarr.json
docs/tutorials/example_0.zarr/obs/_index/: zarr.json
docs/tutorials/example_0.zarr/obs/_index/c/: 0
docs/tutorials/example_0.zarr/obs/cell_type/: zarr.json
docs/tutorials/example_0.zarr/obs/cell_type/codes/: zarr.json
docs/tutorials/example_0.zarr/obs/cell_type/codes/c/: 0
docs/tutorials/example_1.zarr/: zarr.json
docs/tutorials/example_1.zarr/X/: zarr.json
docs/tutorials/example_1.zarr/X/data/: zarr.json
docs/tutorials/example_1.zarr/X/data/c/: 0
docs/tutorials/example_1.zarr/X/indices/: zarr.json
docs/tutorials/example_1.zarr/X/indices/c/: 0
docs/tutorials/example_1.zarr/X/indptr/: zarr.json
docs/tutorials/example_1.zarr/X/indptr/c/: 0
docs/tutorials/example_1.zarr/obs/_index/: zarr.json
docs/tutorials/example_1.zarr/obs/_index/c/: 0
docs/tutorials/example_1.zarr/obs/cell_type/categories/c/: 0
docs/tutorials/example_1.zarr/obs/cell_type/codes/: zarr.json
docs/tutorials/example_1.zarr/obs/cell_type/codes/c/: 0
docs/tutorials/example_1.zarr/var/_index/c/: 0
docs/tutorials/quickstart_collection.zarr/: zarr.json
docs/tutorials/quickstart_collection.zarr/dataset_0/X/: zarr.json
docs/tutorials/quickstart_collection.zarr/dataset_0/X/data/: zarr.json
docs/tutorials/quickstart_collection.zarr/dataset_0/X/data/c/: 0  1
docs/tutorials/quickstart_collection.zarr/dataset_0/X/indices/: zarr.json
docs/tutorials/quickstart_collection.zarr/dataset_0/X/indices/c/: 0  1
docs/tutorials/quickstart_collection.zarr/dataset_0/X/indptr/: zarr.json
docs/tutorials/quickstart_collection.zarr/dataset_0/X/indptr/c/: 0
docs/tutorials/quickstart_collection.zarr/dataset_0/obs/: zarr.json
docs/tutorials/quickstart_collection.zarr/dataset_0/obs/_index/: zarr.json
docs/tutorials/quickstart_collection.zarr/dataset_0/obs/_index/c/: 0
docs/tutorials/quickstart_collection.zarr/dataset_0/obs/cell_type/codes/: zarr.json
docs/tutorials/quickstart_collection.zarr/dataset_0/obs/cell_type/codes/c/: 0
docs/tutorials/quickstart_collection.zarr/dataset_0/obs/src_path/categories/c/: 0
docs/tutorials/quickstart_collection.zarr/dataset_0/obs/src_path/codes/c/: 0
docs/tutorials/quickstart_collection.zarr/dataset_0/var/: zarr.json
docs/tutorials/quickstart_collection.zarr/dataset_0/var/_index/: zarr.json
modlyn/: __init__.py
modlyn/io/: __init__.py  datamodules.py  loading.py  store_creation.py
modlyn/models/: linear.py
moscan/: __init__.py
notebooks/: train_linear.ipynb
src/annbatch/: __init__.py  abc.py  anndata_manager.py  batcher.py  compat.py  dense.py  distributed.py  fields.py  io.py  loader.py  sparse.py  types.py  utils.py
src/annbatch/abc/: __init__.py  base_class_sampler.py  sampler.py
src/annbatch/sampler/: __init__.py  _chunk_sampler.py  _sampler.py
src/annbatch/sampler/abc/: __init__.py  _sampler.py
src/annbatch/samplers/: __init__.py  _bound_class_sampler.py  _categorical_sampler.py  _chunk_sampler.py  _chunk_sampler_distributed.py  _class_sampler.py  _distributed_random_sampler.py  _distributed_sampler.py  _fragmented_random_sampler.py  _random_sampler.py  _sequential_sampler.py  _utils.py
src/annbatch/samplers/abc/: sampler.py
src/arrayloaders/: __init__.py  abc.py  anndata_manager.py  dense.py  io.py  sparse.py  types.py  utils.py
src/arrayloaders/io/: __init__.py  dask_loader.py  datamodules.py  store_creation.py  utils.py  zarr_loader.py
src/arrayloaders/models/: __init__.py  linear.py
tests/: conftest.py  test_base.py  test_bound_class_sampler.py  test_categorical_sampler.py  test_class_sampler.py  test_dask_loading.py  test_data_module.py  test_dataset.py  test_dataset_loading.py  test_distributed_loader.py  test_fields.py  test_fragmented_random_sampler.py  test_grouped_collection.py  test_loading.py  test_obsm.py  test_preshuffle.py  test_sampler.py  test_store_creation.py  test_utils.py  test_version.py
