[build-system]
build-backend = "hatchling.build"
requires = [ "hatch-vcs", "hatchling" ]

[project]
name = "annbatch"
description = "A minibatch loader for AnnData stores"
readme = "README.md"
license = { file = "LICENSE" }
maintainers = [
  { name = "Felix Fischer", email = "felix.fischer@lamin.ai" },
  { name = "Ilan Gold", email = "ilan.gold@scverse.org" },
]
authors = [
  { name = "Felix Fischer" },
  { name = "Ilan Gold" },
]
requires-python = ">=3.12"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dynamic = [ "version" ]
dependencies = [
  "anndata[lazy]>=0.12.9",
  "dask>=2025.9",
  "humanfriendly>=10",
  "pandas>=2.2.2",
  "scipy>1.15",
  # for debug logging (referenced from the issue template)
  "session-info2",
  "tqdm",
  "zarr>=3.1.4",
]
optional-dependencies.cupy-cuda12 = [
  "cupy-cuda12x[ctk]",
]
optional-dependencies.cupy-cuda13 = [
  "cupy-cuda13x[ctk]",
]
optional-dependencies.jax = [ "jax" ]
optional-dependencies.jax-cuda12 = [
  "jax[cuda12]",
]
optional-dependencies.jax-cuda13 = [
  "jax[cuda13]",
]
optional-dependencies.numba = [
  "numba",
]
optional-dependencies.torch = [
  "torch>=2",
]
optional-dependencies.zarrs = [
  "zarrs>=0.2.1",
]
# https://docs.pypi.org/project_metadata/#project-urls
urls.Documentation = "https://annbatch.readthedocs.io/"
urls.Homepage = "https://github.com/scverse/annbatch"
urls.Source = "https://github.com/scverse/annbatch"

# Non-runtime dependencies (PEP 735 dependency groups), not published as extras.
[dependency-groups]
dev = [
  "pre-commit",
  "twine>=4.0.2",
]
test = [
  "annbatch[zarrs]",
  "coverage",
  "pytest",
]
doc = [
  "docutils>=0.8,!=0.18.*,!=0.19.*",
  "ipykernel",
  "ipython",
  "myst-nb>=1.1",
  "pandas",
  "scanpydoc[theme,typehints]>=0.15.3",
  "sphinx>=8.1,<9",
  "sphinx-autodoc-typehints",
  "sphinx-book-theme>=1",
  "sphinx-copybutton",
  "sphinx-design>=0.6",
  "sphinx-issues>=5.0.1",
  "sphinx-tabs",
  "sphinx-toolbox>=3.8",
  "sphinxcontrib-bibtex>=1",
  "sphinxext-opengraph",
]

[tool.hatch]
version.source = "vcs"
envs.default.installer = "uv"
envs.default.dependency-groups = [ "dev" ]
envs.docs.scripts.build = "sphinx-build -M html docs docs/_build -W {args}"
envs.docs.scripts.clean = "git clean -fdX -- {args:docs}"
envs.docs.scripts.open = "python -m webbrowser -t docs/_build/html/index.html"
envs.docs.dependency-groups = [ "doc" ]
envs.hatch-test.python = "3.14"
envs.hatch-test.matrix = [
  { deps = [ "min-low", "pre", "torch", "min-high", "numba", "jax" ] },
]
# If the matrix variable `deps` is set to "pre",
# set the environment variable `UV_PRERELEASE` to "allow".
envs.hatch-test.overrides.matrix.deps.env-vars = [
  { value = "allow", key = "UV_PRERELEASE", if = [ "pre" ] },
  { value = "pre-deps.txt", if = [ "pre" ], key = "UV_CONSTRAINT" }
]
envs.hatch-test.overrides.matrix.deps.features = [
  { value = "torch", if = [ "torch" ] },
  { value = "numba", if = [ "numba" ] },
  { value = "jax", if = [ "jax" ] },
]
envs.hatch-test.overrides.matrix.deps.pre-install-commands = [
  { value = "echo 'zarr @ git+https://github.com/zarr-developers/zarr-python.git' > pre-deps.txt", if = [
    "pre",
  ] }
]
envs.hatch-test.overrides.matrix.deps.python = [
  { value = "3.12", if = [ "min-low" ] },
]
envs.hatch-test.dependency-groups = [ "test" ]

[tool.ruff]
line-length = 120
src = [ "src" ]
extend-include = [ "*.ipynb" ]
format.docstring-code-format = true
lint.select = [
  "B",      # flake8-bugbear
  "BLE",    # flake8-blind-except
  "C4",     # flake8-comprehensions
  "D",      # pydocstyle
  "E",      # Error detected by Pycodestyle
  "F",      # Errors detected by Pyflakes
  "I",      # isort
  "RUF100", # Report unused noqa directives
  "TC",     # Typing imports
  "TID",    # flake8-tidy-imports
  "UP",     # pyupgrade
  "W",      # Warning detected by Pycodestyle
]
lint.ignore = [
  "B008", # Errors from function calls in argument defaults. These are fine when the result is immutable.
  "D100", # Missing docstring in public module
  "D104", # Missing docstring in public package
  "D105", # __magic__ methods are often self-explanatory, allow missing docstrings
  "D107", # Missing docstring in __init__
  # Disable one in each pair of mutually incompatible rules
  "D203", # We don’t want a blank line before a class docstring
  "D213", # <> We want docstrings to start immediately after the opening triple quote
  "D400", # first line should end with a period [Bug: doesn’t work with single-line docstrings]
  "D401", # First line should be in imperative mood; try rephrasing
  "E501", # line too long -> we accept long comment lines; formatter gets rid of long code lines
  "E731", # Do not assign a lambda expression, use a def -> lambda expression assignments are convenient
  "E741", # allow I, O, l as variable names -> I is the identity matrix
]
lint.per-file-ignores."*/__init__.py" = [ "F401" ]
lint.per-file-ignores."docs/*" = [ "I" ]
lint.per-file-ignores."tests/*" = [ "D" ]
lint.pydocstyle.convention = "numpy"

[tool.codespell]
ignore-words-list = "theis,coo,homogenous,GroupT,datas"
skip = ".git,*.pdf,*.svg"

[tool.mypy]
[[tool.mypy.overrides]]
overrides = [ { module = [ "anndata.*", "cupy.*", "cupyx.*", "h5py.*", "torch.*" ], ignore_missing_imports = true } ]

[tool.pytest]
ini_options.testpaths = [ "tests" ]
ini_options.markers = [ "gpu: mark test to run on GPU" ]
ini_options.xfail_strict = true
ini_options.filterwarnings = [
  "error",
  "ignore:(Observation|Variable) names are not unique. To make them unique:UserWarning",
  "ignore:.*FixedLengthUTF32:zarr.core.dtype.common.UnstableSpecificationWarning",
  "ignore:.*Structured:zarr.core.dtype.common.UnstableSpecificationWarning",
  "ignore::anndata._warnings.ImplicitModificationWarning",
  "ignore::scipy.sparse.SparseEfficiencyWarning",
  "ignore:Only `X`, `obs`, and `var` are kept for now:FutureWarning", # TODO: remove in next release
  "ignore:Consolidated metadata is:UserWarning",
  "ignore:Only some AnnData objects have `.raw` attribute:UserWarning",
]
# https://github.com/pytest-dev/pytest/issues/10965
# addopts = [
#   "--import-mode=importlib", # allow using test files with same name
# ]

[tool.coverage]
run.omit = [
  "**/test_*.py",
]
run.patch = [ "subprocess" ]
run.source = [ "annbatch" ]

[tool.cruft]
skip = [
  "tests",
  "src/**/__init__.py",
  "src/**/basic.py",
  "docs/api.md",
  "docs/changelog.md",
  "docs/references.bib",
  "docs/references.md",
  "docs/tutorials/quickstart.ipynb",
]
